--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>360 Tagged Open Ruby Bugs as of 2021-03-30 08:33:59 +0900</title>
+<title>361 Tagged Open Ruby Bugs as of 2021-04-03 06:40:06 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -12,15 +12,15 @@
 <input type="submit" value="lib" />
 <input type="submit" value="thread" />
 <input type="submit" value="ext" />
-<input type="submit" value="encoding" />
 <input type="submit" value="notbug" />
+<input type="submit" value="encoding" />
 <input type="submit" value="ractor" />
 <input type="submit" value="test" />
 <input type="submit" value="cygwin" />
 <input type="submit" value="perf" />
 <input type="submit" value="tracepoint" />
-<input type="submit" value="fiber" />
 <input type="submit" value="refine" />
+<input type="submit" value="fiber" />
 <input type="submit" value="regexp" />
 <input type="submit" value="arm" />
 <input type="submit" value="solaris" />
@@ -41,9 +41,9 @@
 <input type="submit" value="misc" /></p>
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" size="80" />
-(<span id="matched">360</span> matched)
+(<span id="matched">361</span> matched)
 <table>
-<caption>360 Tagged Open Ruby Bugs as of 2021-03-30 08:33:59 +0900</caption>
+<caption>361 Tagged Open Ruby Bugs as of 2021-04-03 06:40:06 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -52,6 +52,27 @@
 </tr>
 </thead>
 <tbody>
+<tr class=" maybenotbug perf ">
+<td><a href="https://bugs.ruby-lang.org/issues/17772">17772</a>
+</td>
+<td>maybenotbug perf</td>
+<td><a href="https://bugs.ruby-lang.org/issues/17772">Performance issue with NameError message in context with large instance variables (not caused by did_you_mean)</a>
+</td>
+</tr>
+<tr class=" patch core ">
+<td><a href="https://bugs.ruby-lang.org/issues/17767">17767</a>
+</td>
+<td>patch core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/17767">`Cloned ENV` inconsistently returns `ENV` or `self`</a>
+</td>
+</tr>
+<tr class=" notbug core ">
+<td><a href="https://bugs.ruby-lang.org/issues/17765">17765</a>
+</td>
+<td>notbug core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/17765">Segmentation fault when calling String#gsub</a>
+</td>
+</tr>
 <tr class=" patch linux ">
 <td><a href="https://bugs.ruby-lang.org/issues/17759">17759</a>
 </td>
@@ -395,13 +416,6 @@
 <td><a href="https://bugs.ruby-lang.org/issues/17529">Ractor Segfaults with GC enabled</a>
 </td>
 </tr>
-<tr class=" fiber ">
-<td><a href="https://bugs.ruby-lang.org/issues/17527">17527</a>
-</td>
-<td>fiber</td>
-<td><a href="https://bugs.ruby-lang.org/issues/17527">rb_io_wait_readable/writable with scheduler don&#39;t check errno </a>
-</td>
-</tr>
 <tr class=" ractor ">
 <td><a href="https://bugs.ruby-lang.org/issues/17516">17516</a>
 </td>
@@ -645,13 +659,6 @@
 </td>
 <td>core patch</td>
 <td><a href="https://bugs.ruby-lang.org/issues/17120">String#start_with? return wrong result for Regexp patterns containing /\K/</a>
-</td>
-</tr>
-<tr class=" core ">
-<td><a href="https://bugs.ruby-lang.org/issues/17105">17105</a>
-</td>
-<td>core</td>
-<td><a href="https://bugs.ruby-lang.org/issues/17105">A single `return` can return to two different places in a proc inside a lambda inside a method</a>
 </td>
 </tr>
 <tr class=" maybenotbug perf lib ">
