--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>363 Tagged Open Ruby Bugs as of 2021-04-22 23:31:32 +0900</title>
+<title>366 Tagged Open Ruby Bugs as of 2021-04-27 04:09:13 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -41,9 +41,9 @@
 <input type="submit" value="wip-patch" /></p>
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" size="80" />
-(<span id="matched">363</span> matched)
+(<span id="matched">366</span> matched)
 <table>
-<caption>363 Tagged Open Ruby Bugs as of 2021-04-22 23:31:32 +0900</caption>
+<caption>366 Tagged Open Ruby Bugs as of 2021-04-27 04:09:13 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -52,11 +52,39 @@
 </tr>
 </thead>
 <tbody>
+<tr class=" thread maybenotbug ">
+<td><a href="https://bugs.ruby-lang.org/issues/17827">17827</a>
+</td>
+<td>thread maybenotbug</td>
+<td><a href="https://bugs.ruby-lang.org/issues/17827">Monitor is not fiber safe</a>
+</td>
+</tr>
+<tr class=" ractor ">
+<td><a href="https://bugs.ruby-lang.org/issues/17826">17826</a>
+</td>
+<td>ractor</td>
+<td><a href="https://bugs.ruby-lang.org/issues/17826">Ractor#take hangs if used in multiple Threads</a>
+</td>
+</tr>
+<tr class=" lib patch ">
+<td><a href="https://bugs.ruby-lang.org/issues/17824">17824</a>
+</td>
+<td>lib patch</td>
+<td><a href="https://bugs.ruby-lang.org/issues/17824">Gem::Deprecate#deprecate doesn&#39;t work with method with keyword arguments</a>
+</td>
+</tr>
 <tr class=" core ">
-<td><a href="https://bugs.ruby-lang.org/issues/17819">17819</a>
+<td><a href="https://bugs.ruby-lang.org/issues/17823">17823</a>
 </td>
 <td>core</td>
-<td><a href="https://bugs.ruby-lang.org/issues/17819">fatal - machine stack overflow in critical region</a>
+<td><a href="https://bugs.ruby-lang.org/issues/17823">addr2line.c: Interpret `DW_RLE_start_length`</a>
+</td>
+</tr>
+<tr class=" core patch ">
+<td><a href="https://bugs.ruby-lang.org/issues/17822">17822</a>
+</td>
+<td>core patch</td>
+<td><a href="https://bugs.ruby-lang.org/issues/17822">Inconsistent visibility behavior with refinements</a>
 </td>
 </tr>
 <tr class=" jit ">
@@ -512,13 +540,6 @@
 </td>
 <td>ractor</td>
 <td><a href="https://bugs.ruby-lang.org/issues/17529">Ractor Segfaults with GC enabled</a>
-</td>
-</tr>
-<tr class=" patch core ">
-<td><a href="https://bugs.ruby-lang.org/issues/17519">17519</a>
-</td>
-<td>patch core</td>
-<td><a href="https://bugs.ruby-lang.org/issues/17519">set_visibility fails when a prepended module and a refinement both exist</a>
 </td>
 </tr>
 <tr class=" ractor ">
